style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -16,7 +16,7 @@ body {
     background-size: 45%;
     text-align: left;
     overflow-x: hidden;
-    width: 100%;
+    width: 100vw !important;
     height: 100vh;
     min-height: 500px;
 
@@ -29,8 +29,8 @@ body {
 
         &.nav-open {
             overflow: hidden;
-            max-height: 100vh;
-            max-width: 100vw;
+            max-height: 100vh !important;
+            max-width: 100vw !important;
         }
     }
 }
